2001-05-23  Nick Clifton  <nickc@cambridge.redhat.com>

	* elf-bfd.h (NUM_SHDR_ENTRIES): New macro: compute the number
	of entries in a structured section.
        * elf.c: Use new macro.
        * elf32-i386.c: Use new macro.
        * elf32-mips.c: Use new macro.
        * elf64-alpha.c: Use new macro.
        * elf64-sparc.c: Use new macro.
        * elfcode.h: Use new macro.
        * elflink.h: Use new macro.

2001-05-23  Nick Clifton  <nickc@cambridge.redhat.com>

	* bfdint.texi: Replace -oformat with --oformat.

2001-05-21  Andreas Jaeger  <aj@suse.de>

	* dwarf2.c (decode_line_info): Fix error message.
	(read_abbrevs): Fix test for offset as suggested by Alan Modra and
	adjust error message.

2001-05-18  H.J. Lu  <hjl@gnu.org>

	* elflink.h (elf_link_add_object_symbols): Revert the last
	change.

2001-05-17  Alan Modra  <amodra@one.net.au>

	* elf32-hppa.c (clobber_millicode_symbols): Temporarily set
	ELF_LINK_FORCED_LOCAL to suit 2001-04-30 change.
	(hppa_build_one_stub): Add an assert to check plt.offset.

2001-05-17  H.J. Lu  <hjl@gnu.org>

	* elflink.h (NAME(bfd_elf,size_dynamic_sections)): Set the
	version definition to basename of the output filename.

2001-05-17  H.J. Lu  <hjl@gnu.org>

	* elflink.h (elf_link_add_object_symbols): Set DT_NEEDED to
	basename of the bfd filename.

2001-05-16  Alan Modra  <amodra@one.net.au>

	* section.c (asection): Add linker_has_input field.
	(STD_SECTION): Adjust initialization to suit.
	* ecoff.c (bfd_debug_section): Likewise.
	* bfd-in2.h: Regenerate.

2001-05-15  Alexandre Oliva  <aoliva@redhat.com>

	* elf-m10300.c (mn10300_elf_relax_section): Don't relax
	negative 32-bit operands to 16 operands when the operand is
	going to be zero-extended by the modified opcode.

2001-05-12  Peter Targett  <peter.targett@arccores.com>

	* cpu-arc.c (arch_info_struct): Add entry 'base' representing old
	name for 'arc5' core versions.
	(bfd_arc_arch): Make bfd_mach_arc_6 default.
